--- a/about.html
+++ b/about.html
@@ -47,7 +47,7 @@
 			<div class="author author--border">
 				<div class="cell cell--12--small cell--4--large author__item">
 					<div class="author__img">
-						<img src="img/photos/tamara-bellis-224507-2.jpg" width="50" alt="author">
+						<img src="img/photos/tamara-bellis-224507-2.jpg" alt="author">
 					</div>
 					<div class="author__info">
 						<p>Lorem ipsum</p>
@@ -57,7 +57,7 @@
 				</div>
 				<div class="cell cell--12--small cell--4--large author__item">
 					<div class="author__img">
-						<img src="img/photos/joshua-peacock-240448-2.jpg" width="50" alt="author">
+						<img src="img/photos/joshua-peacock-240448-2.jpg" alt="author">
 					</div>
 					<div class="author__info">
 						<p>Lorem ipsum</p>
@@ -67,7 +67,7 @@
 				</div>
 				<div class="cell cell--12--small cell--4--large author__item">
 					<div class="author__img">
-						<img src="img/photos/michael-frattaroli-234665.jpg" width="50" alt="author">
+						<img src="img/photos/michael-frattaroli-234665.jpg" alt="author">
 					</div>
 					<div class="author__info">
 						<p>Lorem ipsum</p>
@@ -80,7 +80,7 @@
 			<div class="author">
 				<div class="cell cell--12--small cell--4--large author__item">
 					<div class="author__img">
-						<img src="img/photos/tamara-bellis-224507-2.jpg" width="50" alt="author">
+						<img src="img/photos/tamara-bellis-224507-2.jpg" alt="author">
 					</div>
 					<div class="author__info">
 						<p>Lorem ipsum</p>
@@ -90,7 +90,7 @@
 				</div>
 				<div class="cell cell--12--small cell--4--large author__item">
 					<div class="author__img">
-						<img src="img/photos/joshua-peacock-240448-2.jpg" width="50" alt="author">
+						<img src="img/photos/joshua-peacock-240448-2.jpg" alt="author">
 					</div>
 					<div class="author__info">
 						<p>Lorem ipsum</p>
@@ -100,7 +100,7 @@
 				</div>
 				<div class="cell cell--12--small cell--4--large author__item">
 					<div class="author__img">
-						<img src="img/photos/michael-frattaroli-234665.jpg" width="50" alt="author">
+						<img src="img/photos/michael-frattaroli-234665.jpg" alt="author">
 					</div>
 					<div class="author__info">
 						<p>Lorem ipsum</p>
