--- a/blog-detalji.html
+++ b/blog-detalji.html
@@ -40,7 +40,6 @@
 	</section>
 
 
-
 	<div class="author author--small right">
 		<div class="author__img">
 			<img src="img/photos/michael-frattaroli-234665.jpg" alt="author">
@@ -57,20 +56,20 @@
 		<h3 class="text--dark">Povezani članci</h3>
 
 		<div class="grid grid--gutters">
-			<div class="cell cell--12--small cell--4--large post">
-				<img src="img/photos/andrew-branch-106877.jpg" class="post__img" alt="post" />
+			<div class="cell cell--12--small cell--4--large post post--align">
+				<img src="img/photos/jenn-richardson-112980.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
 				<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
 				<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			</div>
 
-			<div class="cell cell--12--small cell--4--large post">
-				<img src="img/photos/jenn-richardson-112980.jpg" class="post__img" alt="post" />
+			<div class="cell cell--12--small cell--4--large post post--align">
+				<img src="img/photos/andrew-branch-106877.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
 				<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
 				<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			</div>
 
-			<div class="cell cell--12--small cell--4--large post">
-				<img src="img/photos/caleb-jones-135058.jpg" class="post__img" alt="post" />
+			<div class="cell cell--12--small cell--4--large post post--align">
+				<img src="img/photos/caleb-jones-135058.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
 				<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
 				<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			</div>
