--- a/about.html
+++ b/about.html
@@ -119,7 +119,7 @@
 		<h2>Dokumenti</h2>
 
 		<div class="grid grid--gutters">
-			<div class="cell cell--12--small cell--4--large">
+			<div class="cell cell--12--small cell--6--medium cell--4--large">
 				<button class="btn btn--primary doc">
 					<a href="#" class="link">
 					<img src="img/icons/ic_description_white_48dp_2x.png" class="left" alt="docs" />
@@ -127,7 +127,7 @@
 					</a>
 				</button>
 			</div>
-			<div class="cell cell--12--small cell--4--large">
+			<div class="cell cell--12--small cell--6--medium cell--4--large">
 				<button class="btn btn--primary doc">
 					<a href="#" class="link">
 						<img src="img/icons/ic_description_white_48dp_2x.png" class="left" alt="docs" />
@@ -135,7 +135,7 @@
 					</a>
 				</button>
 			</div>
-			<div class="cell cell--12--small cell--4--large">
+			<div class="cell cell--12--small cell--6--medium cell--4--large">
 				<button class="btn btn--primary doc">
 					<a href="#" class="link">
 						<img src="img/icons/ic_description_white_48dp_2x.png" class="left" alt="docs" />
