--- a/blog-detalji.html
+++ b/blog-detalji.html
@@ -47,7 +47,7 @@
 		<div class="author__info">
 			<p>Lorem ipsum</p>
 			<p>Novinar</p>
-			<a href="#" class="link">Svi članci</a>
+			<a href="#" class="link link--grey">Svi članci</a>
 		</div>
 	</div>
 
