--- a/events.html
+++ b/events.html
@@ -26,9 +26,9 @@
 
 	<div class="category">
 		<ul class="right">
-			<li><a href="#" class="link current">SVE</a></li>
-			<li><a href="#" class="link">NADOLAZEĆI</a></li>
-			<li><a href="#" class="link">ARHIVA</a></li>
+			<li><a href="#" class="link link--grey current">SVE</a></li>
+			<li><a href="#" class="link link--grey">NADOLAZEĆI</a></li>
+			<li><a href="#" class="link link--grey">ARHIVA</a></li>
 		</ul>
 	</div>
 
@@ -101,14 +101,14 @@
 
 	<div class="pagination">
 		<ul class="right">
-			<li><a href="#" class="link">&lt;</a></li>
-			<li><a href="#" class="link current">1</a></li>
-			<li><a href="#" class="link">2</a></li>
-			<li><a href="#" class="link">3</a></li>
-			<li><a href="#" class="link">4</a></li>
-			<li><a href="#" class="link">5</a></li>
-			<li><a href="#" class="link">6</a></li>
-			<li><a href="#" class="link">&gt;</a></li>
+			<li><a href="#" class="link link--grey">&lt;</a></li>
+			<li><a href="#" class="link link--grey current">1</a></li>
+			<li><a href="#" class="link link--grey">2</a></li>
+			<li><a href="#" class="link link--grey">3</a></li>
+			<li><a href="#" class="link link--grey">4</a></li>
+			<li><a href="#" class="link link--grey">5</a></li>
+			<li><a href="#" class="link link--grey">6</a></li>
+			<li><a href="#" class="link link--grey">&gt;</a></li>
 		</ul>
 	</div>
 </div>
