--- a/index.html
+++ b/index.html
@@ -24,19 +24,19 @@
 
 			<div class="nav--user__burger">
 				<div class="burger"></div>
-				
-				<div class="nav__link js-nav--user">
-					<ul>
-						<li><a href="#" class="link">O nama</a></li>
-						<li><a href="#" class="link">Blog</a></li>
-						<li><a href="#" class="link">Đogađaji</a></li>
-						<li><a href="#" class="link">Savjeti</a></li>
-						<li><a href="#" class="link">Kontakt</a></li>
-					</ul>
-				</div>
+			</div>
+		
+
+			<div class="nav__links js-nav--user">
+				<ul>
+					<li><a href="#" class="link">O nama</a></li>
+					<li><a href="#" class="link">Blog</a></li>
+					<li><a href="#" class="link">Đogađaji</a></li>
+					<li><a href="#" class="link">Savjeti</a></li>
+					<li><a href="#" class="link">Kontakt</a></li>
+				</ul>
 			</div>
 		</div>
-
 
 		<div class="cell cell--12--small nav--desktop">
 			<div class="nav__logo">
@@ -73,20 +73,20 @@
 
 <section class="container posts">
 	<div class="grid grid--gutters">
-		<div class="cell cell--12--small cell--4--large post post--align">
+		<div class="cell cell--12--small cell--7--medium cell--4--large post post--align">
 			<img src="img/photos/jenn-richardson-112980.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
 			<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 		</div>
 
-		<div class="cell cell--12--small cell--4--large post post--align">
+		<div class="cell cell--12--small cell--7--medium cell--4--large post post--align">
 			<img src="img/photos/andrew-branch-106877.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
 			<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 		</div>
 
-		<div class="cell cell--12--small cell--4--large post post--align">
-			<img src="img/photos/caleb-jones-135058.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
+		<div class="cell cell--12--small cell--7--medium cell--4--large post post--align">
+			<img src="img/photos/andrew-branch-106877.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
 			<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 		</div>
@@ -112,13 +112,13 @@
 		<div class="cell cell--12--small cell--6--large">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
 			<p>Proin vitae nisi vehicula, pretium lacus sit amet, dictum metus. Aliquam tempus lacus nec enim elementum, et accumsan lectus auctor. Integer dignissim felis sit amet ex vulputate, eu elementum purus ullamcorper. Sed et orci eu odio dapibus efficitur in nec nisi. Curabitur hendrerit nibh vel risus efficitur, sed venenatis metus fermentum. Nunc sollicitudin vulputate libero vel eleifend. Mauris a nibh ornare, tincidunt tortor nec, vulputate lorem.</p>
-			<p>Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc. Cras volutpat consequat congue. Praesent commodo, sem placerat porttitor consectetur, libero enim cursus quam, eget sodales ante metus non ex. Sed et ligula erat. Vivamus et convallis mauris, at laoreet quam. Sed convallis arcu at consectetur mattis. Aliquam consequat egestas elit, vel tincidunt sapien vestibulum eget.Fusce at ipsum libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam euismod eros porta mauris consectetur aliquam. Mauris gravida blandit sem vulputate pharetra.Nulla rutrum lectus dui. <a href="#" class="link">VIŠE</a></p>
+			<p>Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc. Cras volutpat consequat congue. Praesent commodo, sem placerat porttitor consectetur, libero enim cursus quam, eget sodales ante metus non ex. Sed et ligula erat. Vivamus et convallis mauris, at laoreet quam. Sed convallis arcu at consectetur mattis. Aliquam consequat egestas elit, vel tincidunt sapien vestibulum eget.Fusce at ipsum libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam euismod eros porta mauris consectetur aliquam. Mauris gravida blandit sem vulputate pharetra.Nulla rutrum lectus dui. <a href="#" class="link link--grey">VIŠE</a></p>
 		</div>
 
 		<div class="cell cell--12--small cell--6--large">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus interdum facilisis. Integer vitae fringilla risus. Fusce vitae efficitur purus, ut egestas mi. Morbi ac felis vel erat rutrum pretium. Integer pretium ornare nulla id consectetur. Proin vitae nisi vehicula, pretium lacus sit amet, dictum metus. Aliquam tempus lacus nec enim elementum, et accumsan lectus auctor. Integer dignissim felis sit amet ex vulputate, eu elementum purus ullamcorper. Sed et orci eu odio dapibus efficitur in nec nisi. Curabitur hendrerit nibh vel risus efficitur, sed venenatis metus fermentum. Nunc sollicitudin vulputate libero vel eleifend. Mauris a nibh ornare, tincidunt tortor nec, vulputate lorem. Etiam vulputate sodales mauris non vulputate.</p>
-			<p>Cras neque elit, laoreet at nibh non, feugiat venenatis augue. Ut erat dui, dictum a euismod ac, vehicula vitae nisl. Maecenas in posuere tellus, at cursus libero. Vivamus vitae rhoncus ligula. <a href="#" class="link">VIŠE</a></p>
+			<p>Cras neque elit, laoreet at nibh non, feugiat venenatis augue. Ut erat dui, dictum a euismod ac, vehicula vitae nisl. Maecenas in posuere tellus, at cursus libero. Vivamus vitae rhoncus ligula. <a href="#" class="link link--grey">VIŠE</a></p>
 		</div>
 	</div>
 
@@ -213,7 +213,7 @@
 		</div>
 
 		<div class="cell cell--12--small cell--5--large">
-			<img src="img/logo.png" class="logo" alt="logo" />
+			<img src="img/logo.png" class="logo right" alt="logo" />
 		</div>
 
 		<div class="cell cell--12--small cell--12--large copy">
