--- a/savjeti.html
+++ b/savjeti.html
@@ -28,10 +28,10 @@
 
 	<div class="category">
 		<ul class="right">
-			<li><a href="#" class="link current">SVE</a></li>
-			<li><a href="#" class="link">KATEGORIJA</a></li>
-			<li><a href="#" class="link">KATEGORIJA</a></li>
-			<li><a href="#" class="link">KATEGORIJA</a></li>
+			<li><a href="#" class="link link--grey current">SVE</a></li>
+			<li><a href="#" class="link link--grey">KATEGORIJA</a></li>
+			<li><a href="#" class="link link--grey">KATEGORIJA</a></li>
+			<li><a href="#" class="link link--grey">KATEGORIJA</a></li>
 		</ul>
 	</div>
 
@@ -83,14 +83,14 @@
 
 	<div class="pagination">
 		<ul class="right">
-			<li><a href="#" class="link">&lt;</a></li>
-			<li><a href="#" class="link current">1</a></li>
-			<li><a href="#" class="link">2</a></li>
-			<li><a href="#" class="link">3</a></li>
-			<li><a href="#" class="link">4</a></li>
-			<li><a href="#" class="link">5</a></li>
-			<li><a href="#" class="link">6</a></li>
-			<li><a href="#" class="link">&gt;</a></li>
+			<li><a href="#" class="link link--grey">&lt;</a></li>
+			<li><a href="#" class="link link--grey current">1</a></li>
+			<li><a href="#" class="link link--grey">2</a></li>
+			<li><a href="#" class="link link--grey">3</a></li>
+			<li><a href="#" class="link link--grey">4</a></li>
+			<li><a href="#" class="link link--grey">5</a></li>
+			<li><a href="#" class="link link--grey">6</a></li>
+			<li><a href="#" class="link link--grey">&gt;</a></li>
 		</ul>
 	</div>
 </div>
@@ -113,8 +113,9 @@
 					</div>
 
 					<div class="form__field">
-						<input type="checkbox" class="checkbox" />
-						<label class="checkbox__label">Slažem se da moje pitanje objavi anonimno</label>
+						<input type="checkbox" class="input--checkbox" id="checkbox1" checked="disabled" />
+						<label for="checkbox1"></label>
+						<p class="checkbox__label">Slažem se da moje pitanje objavi anonimno</p>
 					</div>
 
 					<button class="btn btn--primary btn--contact right"><a href="#">POŠALJI</a></button>
