--- a/blog.html
+++ b/blog.html
@@ -26,10 +26,10 @@
 
 	<div class="category">
 		<ul class="right">
-			<li><a href="#" class="link current">SVE</a></li>
-			<li><a href="#" class="link">KATEGORIJA</a></li>
-			<li><a href="#" class="link">KATEGORIJA</a></li>
-			<li><a href="#" class="link">KATEGORIJA</a></li>
+			<li><a href="#" class="link link--grey current">SVE</a></li>
+			<li><a href="#" class="link link--grey">KATEGORIJA</a></li>
+			<li><a href="#" class="link link--grey">KATEGORIJA</a></li>
+			<li><a href="#" class="link link--grey">KATEGORIJA</a></li>
 		</ul>
 	</div>
 
@@ -102,14 +102,14 @@
 
 	<div class="pagination">
 		<ul class="right">
-			<li><a href="#" class="link">&lt;</a></li>
-			<li><a href="#" class="link current">1</a></li>
-			<li><a href="#" class="link">2</a></li>
-			<li><a href="#" class="link">3</a></li>
-			<li><a href="#" class="link">4</a></li>
-			<li><a href="#" class="link">5</a></li>
-			<li><a href="#" class="link">6</a></li>
-			<li><a href="#" class="link">&gt;</a></li>
+			<li><a href="#" class="link link--grey">&lt;</a></li>
+			<li><a href="#" class="link link--grey current">1</a></li>
+			<li><a href="#" class="link link--grey">2</a></li>
+			<li><a href="#" class="link link--grey">3</a></li>
+			<li><a href="#" class="link link--grey">4</a></li>
+			<li><a href="#" class="link link--grey">5</a></li>
+			<li><a href="#" class="link link--grey">6</a></li>
+			<li><a href="#" class="link link--grey">&gt;</a></li>
 		</ul>
 	</div>
 </div>
