--- a/about.html
+++ b/about.html
@@ -8,6 +8,9 @@
 	<title>O nama | Rastavljeni</title>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 	<link type="text/css" rel="stylesheet" href="scss/main.css">
+	<link type="text/css" rel="stylesheet" href="scss/vendors/animate.css">
+	<script type="text/javascript" src="js/wow.min.js"></script>
+	<script type="text/javascript" src="js/wow_init.js"></script>
 </head>
 
 <body>
@@ -15,7 +18,7 @@
 <header class="header">
 	<div class="gird container">
 		<div class="cell cell--12--small post">
-			<h1>O nama</h1>
+			<h1 class="wow bounceInDown">O nama</h1>
 			<img src="img/photos/tim-marshall-57456.jpg" class="post__img" alt="post" />
 		</div>
 	</div>
@@ -44,7 +47,7 @@
 		<h2>Autori</h2>	
 
 		<div class="grid authors--flex">
-			<div class="author author--border">
+			<div class="author author--border wow fadeInDown">
 				<div class="cell cell--12--small cell--4--large author__item">
 					<div class="author__img">
 						<img src="img/photos/tamara-bellis-224507-2.jpg" alt="author">
@@ -77,7 +80,7 @@
 				</div>
 			</div>
 
-			<div class="author">
+			<div class="author wow fadeInDown">
 				<div class="cell cell--12--small cell--4--large author__item">
 					<div class="author__img">
 						<img src="img/photos/tamara-bellis-224507-2.jpg" alt="author">
@@ -118,7 +121,7 @@
 	<div class="container">
 		<h2>Dokumenti</h2>
 
-		<div class="grid grid--gutters">
+		<div class="grid grid--gutters wow fadeInDown">
 			<div class="cell cell--12--small cell--6--medium cell--4--large">
 				<button class="btn btn--primary doc">
 					<a href="#" class="link">
