--- a/savjeti.html
+++ b/savjeti.html
@@ -8,8 +8,11 @@
 	<title>Savjeti | Rastavljeni</title>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 	<link type="text/css" rel="stylesheet" href="scss/main.css">
+	<link type="text/css" rel="stylesheet" href="scss/vendors/animate.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script type="text/javascript" src="js/accordion_init.js"></script>
+	<script type="text/javascript" src="js/wow.min.js"></script>
+	<script type="text/javascript" src="js/wow_init.js"></script>
 </head>
 
 <body>
@@ -17,7 +20,7 @@
 <header class="header">
 	<div class="gird container">
 		<div class="cell cell--12--small">
-			<h1>Savjeti</h1>
+			<h1 class="wow bounceInDown">Savjeti</h1>
 			<img src="img/photos/tim-marshall-57456.jpg" class="post__img" alt="header" />
 		</div>
 	</div>
@@ -98,7 +101,7 @@
 
 <section class="form-background">
 	<div class="container">
-		<h2>Postavi pitanje</h2>
+		<h2 class="wow bounceInDown">Postavi pitanje</h2>
 
 		<form class="form">
 				<fieldset class="form__fieldset">
@@ -118,7 +121,7 @@
 						<p class="checkbox__label">Slažem se da moje pitanje objavi anonimno</p>
 					</div>
 
-					<button class="btn btn--primary btn--contact right"><a href="#">POŠALJI</a></button>
+					<button class="btn btn--primary btn--contact right wow fadeInRight"><a href="#">POŠALJI</a></button>
 				</fieldset>
 			</form>
 	</div>
