--- a/blog-detalji.html
+++ b/blog-detalji.html
@@ -8,6 +8,9 @@
 	<title>Blog detalji | Rastavljeni</title>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 	<link type="text/css" rel="stylesheet" href="scss/main.css">
+	<link type="text/css" rel="stylesheet" href="scss/vendors/animate.css">
+	<script type="text/javascript" src="js/wow.min.js"></script>
+	<script type="text/javascript" src="js/wow_init.js"></script>
 </head>
 
 <body>
@@ -16,8 +19,10 @@
 	<div class="grid container">
 		<div class="cell cell--12--small post">
 			<img src="img/photos/jenn-richardson-112980.jpg" class="post__img" alt="post" />
-			<h3 class="post__info--top-margin">20.04.2017. - KATEGORIJA</h3>
-			<h1 class="post__title">Lorem ipsum dolor sit amet</h1>
+			<div class="wow fadeInDown">
+				<h3 class="post__info--top-margin">20.04.2017. - KATEGORIJA</h3>
+				<h1 class="post__title">Lorem ipsum dolor sit amet</h1>
+			</div>
 		</div>
 	</div>
 </header>
@@ -40,7 +45,7 @@
 	</section>
 
 
-	<div class="author author--small right">
+	<div class="author author--small right wow bounceInDown">
 		<div class="author__img">
 			<img src="img/photos/michael-frattaroli-234665.jpg" alt="author">
 		</div>
@@ -58,20 +63,26 @@
 		<div class="grid grid--gutters">
 			<div class="cell cell--12--small cell--7--medium cell--4--large post post--align">
 				<img src="img/photos/jenn-richardson-112980.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
-				<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
-				<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+				<div class="wow fadeInDown">
+					<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
+					<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+				</div>
 			</div>
 
 			<div class="cell cell--12--small cell--7--medium cell--4--large post post--align">
 				<img src="img/photos/andrew-branch-106877.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
-				<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
-				<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+				<div class="wow fadeInDown">
+					<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
+					<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+				</div>
 			</div>
 
 			<div class="cell cell--12--small cell--7--medium cell--4--large post post--align">
 				<img src="img/photos/andrew-branch-106877.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
-				<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
-				<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+				<div class="wow fadeInDown">
+					<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
+					<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+				</div>
 			</div>
 		</div>
 	</section>
