--- a/blog.html
+++ b/blog.html
@@ -8,6 +8,9 @@
 	<title>Blog | Rastavljeni</title>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 	<link type="text/css" rel="stylesheet" href="scss/main.css">
+	<link type="text/css" rel="stylesheet" href="scss/vendors/animate.css">
+	<script type="text/javascript" src="js/wow.min.js"></script>
+	<script type="text/javascript" src="js/wow_init.js"></script>
 </head>
 
 <body>
@@ -15,7 +18,7 @@
 <header class="header">
 	<div class="gird container">
 		<div class="cell cell--12--small">
-			<h1>Blog</h1>
+			<h1 class="wow bounceInDown">Blog</h1>
 			<img src="img/photos/corinne-kutz-211251.jpg" class="post__img" alt="header" />
 		</div>
 	</div>
@@ -35,11 +38,11 @@
 
 
 	<div class="grid summary clear">
-		<div class="cell--12--small cell--4--large summary__img">
+		<div class="cell--12--small cell--4--large summary__img wow fadeInLeft">
 			<img src="img/photos/jenn-richardson-112980.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--12--small cell--8--large summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info wow fadeInRight">
 			<h6 class="post__info">20.04.2017. - KATEGORIJA</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
@@ -48,11 +51,11 @@
 	</div>
 
 	<div class="grid summary">
-		<div class="cell cell--12--small cell--4--large summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img wow fadeInLeft">
 			<img src="img/photos/andrew-branch-106877.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--12--small cell--8--large summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info wow fadeInRight">
 			<h6 class="post__info">20.04.2017. - KATEGORIJA</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
@@ -61,11 +64,11 @@
 	</div>
 
 	<div class="grid summary">
-		<div class="cell cell--12--small cell--4--large summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img wow fadeInLeft">
 			<img src="img/photos/oliver-thomas-klein-161835.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--12--small cell--8--large summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info wow fadeInRight">
 			<h6 class="post__info">20.04.2017. - KATEGORIJA</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
@@ -74,11 +77,11 @@
 	</div>
 
 	<div class="grid summary">
-		<div class="cell cell--12--small cell--4--large summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img wow fadeInLeft">
 			<img src="img/photos/jenn-richardson-112980.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--12--small cell--8--large summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info wow fadeInRight">
 			<h6 class="post__info">20.04.2017. - KATEGORIJA</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
@@ -87,11 +90,11 @@
 	</div>
 
 	<div class="grid summary summary--no-border">
-		<div class="cell cell--12--small cell--4--large summary__img">
+		<div class="cell cell--12--small cell--4--large summary__img wow fadeInLeft">
 			<img src="img/photos/andrew-branch-106877.jpg" alt="post" />
 		</div>
 
-		<div class="cell cell--12--small cell--8--large summary__info">
+		<div class="cell cell--12--small cell--8--large summary__info wow fadeInRight">
 			<h6 class="post__info">20.04.2017. - KATEGORIJA</h6>
 			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc.</p>
