--- a/index.html
+++ b/index.html
@@ -8,10 +8,13 @@
 	<title>Rastavljeni</title>
 	<link rel="shortcut icon" type="image/png" href="img/favicon.png"/>
 	<link type="text/css" rel="stylesheet" href="scss/main.css">
+	<link type="text/css" rel="stylesheet" href="scss/vendors/animate.css">
 	<script type="text/javascript" src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
 	<script type="text/javascript" src="js/burger_init.js"></script>
 	<script type="text/javascript" src="js/owl_carousel_init.js"></script>
 	<script type="text/javascript" src="js/owl_carousel_lib.js"></script>
+	<script type="text/javascript" src="js/wow.min.js"></script>
+	<script type="text/javascript" src="js/wow_init.js"></script>
 </head>
 
 <body>
@@ -63,9 +66,11 @@
 	<div class="grid container">
 		<div class="cell cell--12--small post">
 			<img src="img/photos/jenn-richardson-112980.jpg" class="post__img" alt="post" />
-			<h3 class="post__info">20.04.2017. - KATEGORIJA</h3>
-			<h1 class="post__title">Lorem ipsum dolor sit amet</h1>
-			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc. <a href="#" class="link">VIŠE</a></p>
+			<div class="wow fadeInDown">
+				<h3 class="post__info">20.04.2017. - KATEGORIJA</h3>
+				<h1 class="post__title">Lorem ipsum dolor sit amet</h1>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus. Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc. <a href="#" class="link">VIŠE</a></p>
+			</div>
 		</div>
 	</div>
 </header>
@@ -75,20 +80,26 @@
 	<div class="grid grid--gutters">
 		<div class="cell cell--12--small cell--7--medium cell--4--large post post--align">
 			<img src="img/photos/jenn-richardson-112980.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
-			<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
-			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+			<div class="wow fadeInDown">
+				<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
+				<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+			</div>
 		</div>
 
 		<div class="cell cell--12--small cell--7--medium cell--4--large post post--align">
 			<img src="img/photos/andrew-branch-106877.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
-			<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
-			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+			<div class="wow fadeInDown">
+				<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
+				<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+			</div>
 		</div>
 
 		<div class="cell cell--12--small cell--7--medium cell--4--large post post--align">
 			<img src="img/photos/andrew-branch-106877.jpg" class="cell cell--12--small cell--4--large post__img" alt="post" />
-			<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
-			<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+			<div class="wow fadeInDown">
+				<h4 class="post__info">20.04.2017. - KATEGORIJA</h4>
+				<h2 class="post__title">Lorem ipsum dolor sit amet</h2>
+			</div>
 		</div>
 	</div>
 </section>
@@ -109,26 +120,26 @@
 	<h2 class="text--light">Pitanja i odgovori</h2>
 	
 	<div class="grid grid--gutters">
-		<div class="cell cell--12--small cell--6--large">
+		<div class="cell cell--12--small cell--6--large wow fadeInLeft">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
 			<p>Proin vitae nisi vehicula, pretium lacus sit amet, dictum metus. Aliquam tempus lacus nec enim elementum, et accumsan lectus auctor. Integer dignissim felis sit amet ex vulputate, eu elementum purus ullamcorper. Sed et orci eu odio dapibus efficitur in nec nisi. Curabitur hendrerit nibh vel risus efficitur, sed venenatis metus fermentum. Nunc sollicitudin vulputate libero vel eleifend. Mauris a nibh ornare, tincidunt tortor nec, vulputate lorem.</p>
 			<p>Quisque posuere dolor lorem, quis pulvinar quam accumsan sed. Integer sit amet aliquam nunc. Cras volutpat consequat congue. Praesent commodo, sem placerat porttitor consectetur, libero enim cursus quam, eget sodales ante metus non ex. Sed et ligula erat. Vivamus et convallis mauris, at laoreet quam. Sed convallis arcu at consectetur mattis. Aliquam consequat egestas elit, vel tincidunt sapien vestibulum eget.Fusce at ipsum libero. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Aliquam euismod eros porta mauris consectetur aliquam. Mauris gravida blandit sem vulputate pharetra.Nulla rutrum lectus dui. <a href="#" class="link link--grey">VIŠE</a></p>
 		</div>
 
-		<div class="cell cell--12--small cell--6--large">
+		<div class="cell cell--12--small cell--6--large wow fadeInRight">
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus?</p>
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec condimentum lacinia augue, vehicula faucibus eros euismod a. Curabitur sit amet massa leo. Integer eget sapien in risus interdum facilisis. Integer vitae fringilla risus. Fusce vitae efficitur purus, ut egestas mi. Morbi ac felis vel erat rutrum pretium. Integer pretium ornare nulla id consectetur. Proin vitae nisi vehicula, pretium lacus sit amet, dictum metus. Aliquam tempus lacus nec enim elementum, et accumsan lectus auctor. Integer dignissim felis sit amet ex vulputate, eu elementum purus ullamcorper. Sed et orci eu odio dapibus efficitur in nec nisi. Curabitur hendrerit nibh vel risus efficitur, sed venenatis metus fermentum. Nunc sollicitudin vulputate libero vel eleifend. Mauris a nibh ornare, tincidunt tortor nec, vulputate lorem. Etiam vulputate sodales mauris non vulputate.</p>
 			<p>Cras neque elit, laoreet at nibh non, feugiat venenatis augue. Ut erat dui, dictum a euismod ac, vehicula vitae nisl. Maecenas in posuere tellus, at cursus libero. Vivamus vitae rhoncus ligula. <a href="#" class="link link--grey">VIŠE</a></p>
 		</div>
 	</div>
 
-	<button class="btn btn--primary right"><a href="#">READ MORE</a></button>
+	<button class="btn btn--primary right wow fadeInRight"><a href="#">READ MORE</a></button>
 </section>
 
 
 <section class="quote clear">
 	<div class="grid container">
-		<div class="cell cell--12--small">
+		<div class="cell cell--12--small wow fadeInDown">
 			<h2 class="quote__text">"Don't let yesterday use up too much of today."</h2>
 			<h5 class="quote__author">Will Rogers</h5>
 		</div>
@@ -140,7 +151,7 @@
 	<h2 class="text--light">Događaji</h2>
 
 	<div class="grid grid--gutters">
-		<div class="cell cell--12--small cell--6--large event event--border">
+		<div class="cell cell--12--small cell--6--large event event--border wow fadeInLeft">
 			<div class="event__img">
 				<img src="img/photos/oliver-thomas-klein-161835.jpg" alt="event">
 			</div>
@@ -151,7 +162,7 @@
 			</div>
 		</div>
 
-		<div class="cell cell--12--small cell--6--large event event--border">
+		<div class="cell cell--12--small cell--6--large event event--border wow fadeInRight">
 			<div class="event__img">
 				<img src="img/photos/alvin-balemesa-105751.jpg" alt="event">
 			</div>
@@ -162,7 +173,7 @@
 			</div>
 		</div>
 
-		<div class="cell cell--12--small cell--6--large event">
+		<div class="cell cell--12--small cell--6--large event wow fadeInLeft">
 			<div class="event__img">
 				<img src="img/photos/alvin-balemesa-105751.jpg" alt="event">
 			</div>
@@ -173,7 +184,7 @@
 			</div>
 		</div>
 
-		<div class="cell cell--12--small cell--6--large event">
+		<div class="cell cell--12--small cell--6--large event wow fadeInRight">
 			<div class="event__img">
 				<img src="img/photos/oliver-thomas-klein-161835.jpg" alt="event">
 			</div>
@@ -185,7 +196,7 @@
 		</div>
 	</div>
 
-	<button class="btn btn--primary right"><a href="#">READ MORE</a></button>
+	<button class="btn btn--primary right wow fadeInRight"><a href="#">READ MORE</a></button>
 </section>
 
 
@@ -205,7 +216,7 @@
 				</fieldset>
 			</form>
 
-			<div class="sm-icons">
+			<div class="sm-icons wow bounceInDown">
 				<a href="#"><img src="img/icons/twitter.png" class="sm-icons__img" alt="twitter" /></a>
 				<a href="#"><img src="img/icons/instagram.png" class="sm-icons__img" alt="instagram" /></a>
 				<a href="#"><img src="img/icons/facebook.png" class="sm-icons__img" alt="facebook" /></a>
